--- a/index.html
+++ b/index.html
@@ -176,33 +176,33 @@
                     </div>
                 </div>
             </section>
-            <div class="container">
-                <section class="advantages">
-                    <div class="adv-text">
-                        <h2>Наши преимущества</h2>
-                        <p class="adv-text__par">Наша команда готова уделять максимальное внимание вашим потребностям, предлагать наиболее оптимальные решения и строить отношения на взаимном доверии и долгосрочном партнерстве.</p>
+        </div>
+        <div class="container">
+            <section class="advantages">
+                <div class="adv-text">
+                    <h2>Наши преимущества</h2>
+                    <p class="adv-text__par">Наша команда готова уделять максимальное внимание вашим потребностям, предлагать наиболее оптимальные решения и строить отношения на взаимном доверии и долгосрочном партнерстве.</p>
+                </div>
+                <div class="number-adv">
+                    <div class="card-adv">
+                        <span>+220</span>
+                        <p class="card-adv__par">Довольных клиентов</p>
                     </div>
-                    <div class="number-adv">
-                        <div class="card-adv">
-                            <span>+220</span>
-                            <p class="card-adv__par">Довольных клиентов</p>
-                        </div>
-                        <div class="card-adv">
-                            <span>67%</span>
-                            <p class="card-adv__par">Довольных клиентов</p>
-                        </div>
-                        <div class="card-adv">
-                            <span>25%</span>
-                            <p class="card-adv__par">Увеличения прибыли</p>
-                        </div>
-                        <div class="card-adv">
-                            <span>х3</span>
-                            <p class="card-adv__par">Компания растет
-                                ежегодно</p>
-                        </div>
+                    <div class="card-adv">
+                        <span>67%</span>
+                        <p class="card-adv__par">Довольных клиентов</p>
                     </div>
-                </section>
-            </div>
+                    <div class="card-adv">
+                        <span>25%</span>
+                        <p class="card-adv__par">Увеличения прибыли</p>
+                    </div>
+                    <div class="card-adv">
+                        <span>х3</span>
+                        <p class="card-adv__par">Компания растет
+                            ежегодно</p>
+                    </div>
+                </div>
+            </section>
         </div>
             <section class="cases">
                 <div class="container">
@@ -292,6 +292,137 @@
                 </div>
                 <img src="img/map.png" alt="Карта">
             </section>
+            <section class="news">
+                <div class="wr-title">
+                    <h2>Блог</h2>
+                    <a class="link-disc" href="">Все новости</a>
+                </div>
+                <div class="card-wrapper">
+                    <div class="card blog">
+                        <div class="card-image"></div>
+                        <div class="card-inf">
+                            <h3 class="card-inf__title">Как создать чат-бота
+                                Salesbot в amoCRM?</h3>
+                            <div class="card-arrow"> 
+                                <p class="card-arrow__data">30.09.2024</p>
+                                <div class="card-arrow__circle"><svg width="20" height="11" viewBox="0 0 20 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 5H18.5M18.5 5L12 1M18.5 5L12 9.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="card-link"></a>
+                    </div>
+                    <div class="card blog">
+                        <div class="card-image"></div>
+                        <div class="card-inf">
+                            <h3 class="card-inf__title">Чат-боты в amoCRM</h3>
+                            <div class="card-arrow"> 
+                                <p class="card-arrow__data">24.09.2024</p>
+                                <div class="card-arrow__circle"><svg width="20" height="11" viewBox="0 0 20 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 5H18.5M18.5 5L12 1M18.5 5L12 9.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="card-link"></a>
+                    </div>
+                    <div class="card blog">
+                        <div class="card-image"></div>
+                        <div class="card-inf">
+                            <h3 class="card-inf__title">Настройка amoPAY
+                                и управление</h3>
+                            <div class="card-arrow"> 
+                                <p class="card-arrow__data">23.09.2024</p>
+                                <div class="card-arrow__circle"><svg width="20" height="11" viewBox="0 0 20 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 5H18.5M18.5 5L12 1M18.5 5L12 9.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="card-link"></a>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h2>Вы спрашиваете - мы отвечаем</h2>
+                <div class="faq-wr">
+                    <div class="faq__elements active">
+                        <div class="faq__button" data-bs-target="#collapseOne_334" data-bs-toggle="collapse">
+                            <div class="faq__case">
+                                <div class="faq__title">
+                                    Я могу внедрить amoCRM самостоятельно? </div>
+                                <div id="collapseOne_334" class="faq_content collapse">
+                                    <div class="faq__text">
+                                        Мы не раз видели случаи, когда результат самостоятельного внедрения не оправдал ожиданий.<br>
+                                        <br> Мы искренне советуем сэкономить время и деньги, не доводить проект до необходимости спасать вашу систему и доверить внедрение профессионалам с самого начала.<br>
+                                        <br> Если вы все же решитесь попробовать внедрить amoCRM самостоятельно, пройдите качественное обучение. И помните, вложения в CRM-систему - это не расход, а инвестиция в ваш бизнес. </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="faq__elements active">
+                        <div class="faq__button" data-bs-target="#collapseOne_333" data-bs-toggle="collapse">
+                            <div class="faq__case">
+                                <div class="faq__title">
+                                    Сколько стоит внедрение amoCRM? </div>
+                                <div id="collapseOne_333" class="faq_content collapse">
+                                    <div class="faq__text">
+                                        Внедрение amoCRM - это индивидуальный и масштабный проект.<br>
+                                        <br> Мы анализируем бизнес-процессы, строим систему продаж, обеспечиваем рост эффективности каждого конечного пользователя CRM.<br>
+                                        <br> Подбираем отраслевые решения для вашей ниши, облачные сервисы, которые в связке с amoCRM дадут космический эффект. Обязательно обучаем вашу команду работе с системой.<br>
+                                        <br> Стоимость внедрения зависит от количества сотрудников, которые работают с CRM и от сложности задач, которые вы хотите решить с помощью новой системы продаж. </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="faq__elements active">
+                        <div class="faq__button" data-bs-target="#collapseOne_290" data-bs-toggle="collapse">
+                            <div class="faq__case">
+                                <div class="faq__title">
+                                    Сколько длится внедрение CRM? </div>
+                                <div id="collapseOne_290" class="faq_content collapse">
+                                    <div class="faq__text">
+                                        Развитие CRM – бесконечный процесс. В свою собственную amoCRM мы вложили несколько миллионов рублей и 4 года непрерывной работы. При этом наша компания гораздо меньше, чем бизнесы многих наших клиентов.<br>
+                                        <br> Проект внедрения может быть реализован за 3 недели, а может длиться несколько лет. Все зависит от сложности системы, которую мы будем строить вместе с вами.<br>
+                                        <br> Но вы можете быть уверены, что мы сделаем все возможное, чтобы за время нашего сотрудничества построить для вас максимально эффективную систему продаж и CRM, которая всегда будет на 2 шага впереди
+                                        систем ваших конкурентов. </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="faq__elements active">
+                        <div class="faq__button" data-bs-target="#collapseOne_289" data-bs-toggle="collapse">
+                            <div class="faq__case">
+                                <div class="faq__title">
+                                    Какое отношение IntoGroup имеет к amoCRM? </div>
+                                <div id="collapseOne_289" class="faq_content collapse">
+                                    <div class="faq__text">
+                                        Мы входим в тройку крупнейших партнеров-интеграторов amoCRM.<br> Каждый наш специалист проходит и ежегодно подтверждает обязательную сертификацию в amoCRM и других сервисах, которые мы внедряем.<br>                                                    Ваши бизнес-цели являются нашим приоритетом.<br> Убедиться в профессионализм сотрудников нашей команды вы можете, </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
+        <section class="project">
+            <div class="container">
+                <div class="title">
+                    <h2>Обсудить проект</h2>
+                    <p>Оставьте заявку и расскажите о проекте
+                        в форме или свяжитесь с нами напрямую</p>
+                </div>
+                <div class="wr-form">
+                    <div class="left-form">
+                        
+                    </div>
+                    <div class="right-number"></div>
+                </div>
+                <div class="cont-map">
+                    <img src="img/map-bottom.png" alt="Карта">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
