--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -23,7 +24,7 @@
                 <a href="">Контакты</a>
             </nav>
             <div class="button-tel">
-                <div class="button-tel__number"><a href="tel:+7 (831) 231-21-43">+7 (831) 231 21 43</a></div>
+                <div class="button-tel__number"><a href="tel:+79200408114">+7 (920) 040-81-14</a></div>
                 <div class="button-tel__call"><button class="btn">Заказать звонок</button></div>
             </div>
         </div>
@@ -108,54 +109,77 @@
                     </div>
                 </section>
                 <section class="stages-sec">
-                    <h2>Оптимизируем работу отдела продаж,
-                        чтобы достичь максимальной выручки
-                        при минимальных усилиях</h2>
-                    <div class="stages">
-                        <div class="card card-st">
-                            <div class="card-top">
-                                <h3 class="card-top__title">Разрабатываем план 
-                                    внедрения</h3>
-                                <p class="card-top__text">Определим задачи amoCRM
-                                    и создадим план для достижени
-                                    целей, учитывая особенности
-                                    вашего бизнеса.</p>
+                    <div class="stages-title">
+                        <h2>Оптимизируем работу отдела продаж,
+                            чтобы достичь максимальной выручки
+                            при минимальных усилиях</h2>
+                        <img class="stages-title__arrow" src="img/arrow.png"></img>
+                    </div>
+                    <div class="swiper stage">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide card card-st">
+                                <div class="card-top">
+                                    <h3 class="card-top__title">Разрабатываем план 
+                                        внедрения</h3>
+                                    <p class="card-top__text">Определим задачи amoCRM
+                                        и создадим план для достижени
+                                        целей, учитывая особенности
+                                        вашего бизнеса.</p>
+                                </div>
+                                <div class="card-bot">
+                                    <p class="card-bot__result">Результат:</p>
+                                    <p class="card-bot__desc">Согласованное понимание
+                                        задачи.</p>
+                                </div>
                             </div>
-                            <div class="card-bot">
-                                <p class="card-bot__result">Результат:</p>
-                                <p class="card-bot__desc">Согласованное понимание
-                                    задачи.</p>
+                            <div class="swiper-slide card card-st">
+                                <div class="card-top">
+                                    <h3 class="card-top__title">Проведем комплексный
+                                        анализ</h3>
+                                    <p class="card-top__text">Что будем смотреть: продукт,
+                                        клиентов, компанию,
+                                        отдел продаж.</p>
+                                </div>
+                                <div class="card-bot">
+                                    <p class="card-bot__result">Результат:</p>
+                                    <p class="card-bot__desc">Составим план развития вашей CRM.</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card card-st">
-                            <div class="card-top">
-                                <h3 class="card-top__title">Проведем комплексный
-                                    анализ</h3>
-                                <p class="card-top__text">Что будем смотреть: продукт,
-                                    клиентов, компанию,
-                                    отдел продаж.</p>
+                            <div class="swiper-slide card card-st">
+                                <div class="card-top">
+                                    <h3 class="card-top__title">Настроим CRM</h3>
+                                    <p class="card-top__text">Полный перенос работы в CRM:
+                                        подбор лицензий, добавлени
+                                        сотрудников, настройка права,
+                                        создание полей, воронок
+                                        продаж.</p>
+                                </div>
+                                <div class="card-bot">
+                                    <p class="card-bot__result">Результат:</p>
+                                    <p class="card-bot__desc">Менеджеры могут вести
+                                        клиентов по воронке.</p>
+                                </div>
                             </div>
-                            <div class="card-bot">
-                                <p class="card-bot__result">Результат:</p>
-                                <p class="card-bot__desc">Составим план развития вашей CRM.</p>
-                            </div>
-                        </div>
-                        <div class="card card-st">
-                            <div class="card-top">
-                                <h3 class="card-top__title">Настроим CRM</h3>
-                                <p class="card-top__text">Полный перенос работы в CRM:
-                                    подбор лицензий, добавлени
-                                    сотрудников, настройка права,
-                                    создание полей, воронок
-                                    продаж.</p>
-                            </div>
-                            <div class="card-bot">
-                                <p class="card-bot__result">Результат:</p>
-                                <p class="card-bot__desc">Менеджеры могут вести
-                                    клиентов по воронке.</p>
+                            <div class="swiper-slide card card-st">
+                                <div class="card-top">
+                                    <h3 class="card-top__title">Настроим CRM</h3>
+                                    <p class="card-top__text">Полный перенос работы в CRM:
+                                        подбор лицензий, добавлени
+                                        сотрудников, настройка права,
+                                        создание полей, воронок
+                                        продаж.</p>
+                                </div>
+                                <div class="card-bot">
+                                    <p class="card-bot__result">Результат:</p>
+                                    <p class="card-bot__desc">Менеджеры могут вести
+                                        клиентов по воронке.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </section>
             </div>
             <section class="form-crm">
@@ -445,12 +469,12 @@
                     <div class="right-number">
                         <div class="el-text">
                             <p class="details__text">Написать нам на почту</p>
-                            <a href="mailto:into.bitrix24@gmail.com">into.amocrm@gmail.com</a><br>
+                            <a href="mailto:info.intogroup@yandex.ru">info.intogroup@yandex.ru</a><br>
                             <a href="mailto:into.bitrix24@yandex.ru">into.bitrix24@yandex.ru</a>
                         </div>
                         <div class="el-text">
                             <p class="details__text">Поговорить с нами по телефону</p>
-                            <a href="tel:+78312312143">+7 (831) 231-21-43</a><br>
+                            <a href="tel:+79200408114">+7 (920) 040-81-14</a><br>
                             <a href:="tel:+79625104914">+7 (962) 510-49-14</a>
                         </div>
                         <div class="el-text">
@@ -461,13 +485,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="cont-map">
-                    <img src="img/map-bottom.png" alt="Карта">
-                </div>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A3d52e20dcd553bc338d47fda89d9a68ba2ccba254d50a53c5aa35a8385de69ed&amp;source=constructor" width="100%" height="512" frameborder="0"></iframe>
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="container">
+        <div class="bottom-ft">
+            <div class="number-footer">
+                <a class="number" href="tel:+79200408114">+7 (920) 040-81-14</a><br>
+                <a class="number" href:="tel:+79625104914">+7 (962) 510-49-14</a><br><br>
+                <p class="ft-adress">Время работы: с 9:00 - до 18:00<br>
+                    г.Нижний Новгород, ул.Ильинская 119, эт.3</p>
+                <a class="ft-adress" href="mailto:info.intogroup@yandex.ru">info.intogroup@yandex.ru</a><br>
+                <a class="ft-adress" href="mailto:into.bitrix24@yandex.ru">into.bitrix24@yandex.ru</a>
+            </div>
+            <div class="logo-footer">
+                <img src="img/logo-footer.png">
+                <a class="ft-adress" href="">Пользовательское соглашение</a>
+                <a class="ft-adress" href="">Карта сайта</a>
+            </div>
+        </div>
+        <p>© 2024 Внедрение CRM систем для вашего бизнеса СЕРТИФИЦИРОВАННЫЙ ПАРТНЕР</p>
     </footer>
 </body>
+<script src="js/script.js"></script>
+</html>
