--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <header class="container">
         <div class="menu-header">
             <div class="logo-name">
-                <img src="img/logo-header.svg" alt="За стеклом" width="100px" height="32px">
+                <a href="/">
+                    <img src="img/logo-header.svg" alt="Лого" width="100px" height="32px">
+                </a>
             </div>
             <nav class="nav-menu">
                 <a href="">О компании</a>
-                <a href="">Услуги</a>
+                <a href="services.html">Услуги</a>
                 <a href="">Лицензии</a>
                 <a href="">Блог</a>
                 <a href="">Кейсы</a>
@@ -60,19 +62,19 @@
                             <button class="btn square width">Рассчитать стоимость</button>
                         </div>
                         <div class="all-serv">
-                            <a class="card link-serv" href="">
+                            <a class="card link-serv card-hover" href="">
                                 <h3 class="link-serv__title">CRM</h3>
                                 <p class="link-serv__text">Надежная CRM система способная объединить в себе самые эффективные инструменты коммуникации с вашими клиентами.</p>
                             </a>
-                            <a class="card link-serv" href="">
+                            <a class="card link-serv card-hover" href="">
                                 <h3 class="link-serv__title">1C</h3>
                                 <p class="link-serv__text">Вы можете получить помощь квалифицированных программистов 1С по всем вопросам работы программ 1С.</p>
                             </a>
-                            <a class="card link-serv" href="">
+                            <a class="card link-serv card-hover" href="">
                                 <h3 class="link-serv__title">Сайты</h3>
                                 <p class="link-serv__text">IntoCRM разрабатывает сайты, адаптированные под ваши потребности.</p>
                             </a>  
-                            <a class="card link-serv" href="">
+                            <a class="card link-serv card-hover" href="">
                                 <h3 class="link-serv__title">Виджеты</h3>
                                 <p class="link-serv__text">Разрабатываем приложения для увеличения прибыли специально для вашей CRM-системы.</p>
                             </a>
