--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="foto">
-                        <img src="img/alexk.jpg" alt="Alex">
+                        <img src="img/cons.png" alt="">
                     </div>
                 </div>
             </section>
@@ -396,7 +396,8 @@
                                         Внедрение amoCRM - это индивидуальный и масштабный проект.<br>
                                         <br> Мы анализируем бизнес-процессы, строим систему продаж, обеспечиваем рост эффективности каждого конечного пользователя CRM.<br>
                                         <br> Подбираем отраслевые решения для вашей ниши, облачные сервисы, которые в связке с amoCRM дадут космический эффект. Обязательно обучаем вашу команду работе с системой.<br>
-                                        <br> Стоимость внедрения зависит от количества сотрудников, которые работают с CRM и от сложности задач, которые вы хотите решить с помощью новой системы продаж. </div>
+                                        <br> Стоимость внедрения зависит от количества сотрудников, которые работают с CRM и от сложности задач, которые вы хотите решить с помощью новой системы продаж. 
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -411,7 +412,8 @@
                                         Развитие CRM – бесконечный процесс. В свою собственную amoCRM мы вложили несколько миллионов рублей и 4 года непрерывной работы. При этом наша компания гораздо меньше, чем бизнесы многих наших клиентов.<br>
                                         <br> Проект внедрения может быть реализован за 3 недели, а может длиться несколько лет. Все зависит от сложности системы, которую мы будем строить вместе с вами.<br>
                                         <br> Но вы можете быть уверены, что мы сделаем все возможное, чтобы за время нашего сотрудничества построить для вас максимально эффективную систему продаж и CRM, которая всегда будет на 2 шага впереди
-                                        систем ваших конкурентов. </div>
+                                        систем ваших конкурентов. 
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -423,7 +425,8 @@
                                     Какое отношение IntoGroup имеет к amoCRM? </div>
                                 <div id="collapseOne_289" class="faq_content collapse">
                                     <div class="faq__text">
-                                        Мы входим в тройку крупнейших партнеров-интеграторов amoCRM.<br> Каждый наш специалист проходит и ежегодно подтверждает обязательную сертификацию в amoCRM и других сервисах, которые мы внедряем.<br>                                                    Ваши бизнес-цели являются нашим приоритетом.<br> Убедиться в профессионализм сотрудников нашей команды вы можете, </div>
+                                        Мы входим в тройку крупнейших партнеров-интеграторов amoCRM.<br> Каждый наш специалист проходит и ежегодно подтверждает обязательную сертификацию в amoCRM и других сервисах, которые мы внедряем.<br>                                                    Ваши бизнес-цели являются нашим приоритетом.<br> Убедиться в профессионализм сотрудников нашей команды вы можете, 
+                                    </div>
                                 </div>
                             </div>
                         </div>
