--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="container">
-            <div class="necessity">
+            <secyion class="necessity">
                 <h2><span>Проблемы, которые не оставляют шансов</span><br> Когда CRM становится необходимостью</h2>
                 <p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
                     CRM-системы жизненно необходимым.</p>
@@ -60,10 +60,10 @@
                     </div>
                 </div>
                 <div class="wrapper-btn">
-                    <button class="btn">оставить заявку</button>
+                    <button class="btn width">оставить заявку</button>
                     <p class="wrapper-btn__text">В условиях постоянной конкуренции и быстро меняющихся рыночных условий внедрение CRM-системы становится не просто желательным, а необходимым шагом для успешного ведения бизнеса.</p>
                 </div>
-            </div>
+            </section>
             <section class="bizness">
                 <div class="wr-biz">
                     <div class="wr-biz__foto">
@@ -74,13 +74,13 @@
                         <p>остальные 80% усилий — лишь 20% результата</p>
                         <p>Закон Парето</p>
                     </div>
-                    <h2>Преобразите свой бизнес<br><span>CRM-системы для максимальной эффективности</span></h2>
-                    <p class="wr-bix__bid">Оставьте заявку прямо сейчас, чтобы получить профессиональную помощь в выборе и настройке решения, которое идеально подойдет именно для вашего бизнеса. Наша команда готова уделять максимальное внимание вашим потребностям, предлагать
+                    <h2 class="wr-biz__title">Преобразите свой бизнес<br><span>CRM-системы для максимальной эффективности</span></h2>
+                    <p class="wr-biz__bid">Оставьте заявку прямо сейчас, чтобы получить профессиональную помощь в выборе и настройке решения, которое идеально подойдет именно для вашего бизнеса. Наша команда готова уделять максимальное внимание вашим потребностям, предлагать
                         наиболее оптимальные решения.</p>
                     <div class="wr-biz__picture">
                         <img src="img/rec.png">
                     </div>
-                    <ul class="list">
+                    <ul class=" wr-biz__list list">
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-1" y="13.1422" width="20" height="20" rx="4" transform="rotate(-45 -1 13.1422)" fill="#454545"/>
                             </svg>
