--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 </head>
 
-<body>
+<body class="black">
     <header class="container">
         <div class="menu-header">
             <a href="/">
@@ -33,7 +33,7 @@
     <main>
         <div class="container">
             <secyion class="necessity">
-                <h2><span>Проблемы, которые не оставляют шансов</span><br> Когда CRM становится необходимостью</h2>
+                <h2 class="up-title"><span>Проблемы, которые не оставляют шансов</span><br> Когда CRM становится необходимостью</h2>
                 <p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
                     CRM-системы жизненно необходимым.</p>
                 <div class="grid-card">
@@ -60,14 +60,14 @@
                     </div>
                 </div>
                 <div class="wrapper-btn">
-                    <button class="btn width">оставить заявку</button>
+                    <button class="btn width">Оставить заявку</button>
                     <p class="wrapper-btn__text">В условиях постоянной конкуренции и быстро меняющихся рыночных условий внедрение CRM-системы становится не просто желательным, а необходимым шагом для успешного ведения бизнеса.</p>
                 </div>
             </section>
             <section class="bizness">
                 <div class="wr-biz">
                     <div class="wr-biz__foto">
-                        <img src="img/img.png" alt="">
+                        <img src="img/bg-blue.png" alt="">
                     </div>
                     <div class="wr-biz__author">
                         <h4>20% усилий дают 80% результата</h4>
@@ -103,6 +103,65 @@
                         </div>
                     </ul>
                     <p class="wr-biz__text">Не упустите шанс улучшить свои бизнес-процессы и увеличить прибыль — <span>свяжитесь с нами</span> уже сегодня!</p>
+                </div>
+            </section>
+            <section class="implementation">
+                <h2 class="up-title">Этапы внедрения и ведения CRM<br><span>для достижения максимальной выручки при минимальных усилиях</span></h2>
+                <div class="grid-st">
+                    <div class="number-st">
+                        <div class="text-basic">
+                            <h3 class="text-basic__title">Аудит и составление ТЗ</h3>
+                            <p class="text-basic__par">срок
+                                1-2 недели</p>
+                            <p class="text-basic__par">стоимость
+                                по тарифу </p>
+                            <p class="text-basic__par">Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                        </div>
+                        <div class="text-foto">
+                            <div></div>
+                            <p>Результат</p>
+                        </div>
+                    </div>
+                    <div class="number-st">
+                        <div class="text-basic">
+                            <h3 class="text-basic__title">Внедрение CRM</h3>
+                            <p class="text-basic__par">срок
+                                1-7 месяцев</p>
+                            <p class="text-basic__par">стоимость
+                                от 2000 руб./час</p>
+                            <p class="text-basic__par">Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                        </div>
+                        <div class="text-foto">
+                            <div></div>
+                            <p>Результат</p>
+                        </div>
+                    </div>
+                    <div class="number-st">
+                        <div class="text-basic">
+                            <h3 class="text-basic__title">Сопровождение</h3>
+                            <p class="text-basic__par">срок
+                                ежемесячно</p>
+                            <p class="text-basic__par">стоимость
+                                от 2000 руб./час</p>
+                            <p class="text-basic__par">Получите в распоряжение команду экспертов для ежемесячного развития и гарантии работоспособности CRM-системы</p>
+                        </div>
+                        <div class="more-details">
+                            <button>Подробнее</button>
+                        </div>
+                    </div>
+                    <div class="number-st">
+                        <div class="text-basic">
+                            <h3 class="text-basic__title">Индивидуальная разработка</h3>
+                            <p class="text-basic__par">срок
+                                от 1 недели</p>
+                            <p class="text-basic__par">стоимость
+                                от 2000 руб./час</p>
+                            <p class="text-basic__par">Если базового функционала недостаточно, мы разработаем уникальные модули, которые полностью соответствуют специфике вашего бизнеса</p>
+                        </div>
+                        <div class="more-details">
+                            <button>Подробнее</button>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
