--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@
                             <p class="text-basic__par">Получите в распоряжение команду экспертов для ежемесячного развития и гарантии работоспособности CRM-системы</p>
                         </div>
                         <div class="more-details">
-                            <button>Подробнее</button>
+                            <button class="btn">Подробнее</button>
                         </div>
                     </div>
                     <div class="number-st">
@@ -159,7 +159,7 @@
                             <p class="text-basic__par">Если базового функционала недостаточно, мы разработаем уникальные модули, которые полностью соответствуют специфике вашего бизнеса</p>
                         </div>
                         <div class="more-details">
-                            <button>Подробнее</button>
+                            <button class="btn">Подробнее</button>
                         </div>
                     </div>
                 </div>
